test/badLhs6.slq

def main(){
	[1,2]:=[1,2,3]; // error
}
